--- a/html/style.css
+++ b/html/style.css
@@ -1,10 +1,77 @@
+html, body{
+	padding: 0;
+	margin:0;
+	font-family:Georgia, 'Times New Roman', Times, serif
+}
 
-.videos {
+.colonne{
 
-    width :30% ;
-    height: 360px; 
-    padding-left: 25%;
-    padding-right: 25%;
-    border: none;
-    margin-top: 10%;
+	background-color: #dcdada;
+	width: 60%;
+	height: 100%;
+	margin-right: 20%;
+	margin-left: 20%;
+
+}
+
+ul li video {
+	width:420px;
+    border:2px solid black;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+
+}
+
+#list{
+	
+	font-size:  1.5em;
+}
+
+ul li{
+	list-style-type : none;
+	text-align: center;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+
+header{
+
+	background-color:#6f6f6f;
+	height: 120px;
+}
+
+header img{
+	position: absolute;
+	max-height: 120px;
+	padding-left: 5%;
+}
+
+
+#searchbar{
+	margin-left: 50%;
+	margin-top:50px;
+
+	border-radius: 10px;
+
+	width : 40%;
+	height: 20%;
+
+}
+
+h2{
+	padding:5%; 
+	margin:0;
+}
+
+footer {
+	background-color:#6f6f6f;
+	height: 100px;
+	padding: 1%;
+}
+
+footer p, footer pre{
+
+	text-align: center;
 }
